--- a/pages/landing/landing.css
+++ b/pages/landing/landing.css
@@ -4,6 +4,264 @@
   margin: 0;
 }
 
+@media screen and (max-width: 992px) {
+  .heading__title {
+    font-size: 60px;
+    line-height: 1;
+    text-align: center;
+  }
+  .hero .heading__subtitle {
+    padding: 30px 0 !important;
+    justify-content: center;
+    display: flex;
+  }
+  .heading__subtitle {
+    font-size: 24px !important;
+  }
+  .heading__subtitle__second {
+    font-size: 24px !important;
+  }
+  h2 {
+    font-size: 35px !important;
+  }
+  .hero {
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    background-size: 500px 300px;
+    background-position: right bottom;
+    padding: 145px 60px 225px 60px !important;
+  }
+  .box2 {
+    background: #fbfafa;
+    padding: 147px 20px 157px;
+  }
+  .our__work {
+    padding: 16px;
+  }
+  .grid_our__work {
+    width: 100% !important;
+    margin: 0;
+  }
+  .Work__rrow1,
+  .Work__rrow2 {
+    display: block !important;
+  }
+  .box2 {
+    padding: 100px 60px 100px !important;
+  }
+  .grid-container {
+    display: flex !important;
+    flex-direction: column;
+    padding-top: 30px !important;
+  }
+  .heading__subtitle__second {
+    display: contents !important;
+  }
+
+  .icon__person {
+    right: 30px !important;
+    top: 0px !important;
+  }
+  .solving__problems h3 {
+    padding: 0;
+    font-size: 25px !important;
+    padding: 20px;
+  }
+
+  .content {
+    position: relative;
+  }
+  .container__box__internal {
+    height: 245px !important;
+    align-content: center;
+    justify-content: center;
+  }
+  .box4 {
+    padding: 100px 60px 100px !important;
+  }
+  .icon {
+    top: -30px !important;
+  }
+  .grid-item hr {
+    width: 0 !important;
+  }
+  .box5 {
+    padding: 60px 60px 100px !important;
+  }
+  .break {
+    display: none;
+  }
+  .hiring__holder {
+    padding: 100px 0 !important;
+  }
+  .hiring__img {
+    height: 200px;
+  }
+  .hiring__holder .hiring__section p {
+    font-size: 24px !important;
+  }
+  .form__section__holder {
+    padding: 60px !important;
+  }
+  .form__section__holder .form__section h2 {
+    line-height: 40px !important;
+  }
+}
+@media screen and (max-width: 768px) {
+  .heading__title {
+    font-size: 50px;
+    line-height: 1;
+    text-align: center;
+  }
+  .hero .heading__subtitle {
+    padding: 20px 0 !important;
+    justify-content: center !important;
+    display: flex;
+    margin: 0;
+  }
+  .heading__subtitle {
+    font-size: 20px !important;
+  }
+  .heading__subtitle__second {
+    font-size: 20px !important;
+  }
+  h2 {
+    font-size: 35px !important;
+  }
+  .hero {
+    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    background-size: 350px 150px;
+    background-position: right bottom;
+    padding: 80px 60px 250px 60px !important;
+  }
+  .box2 {
+    background: #fbfafa;
+    padding: 100px 30px 100px 30px !important;
+  }
+  .our__work {
+    padding: 16px;
+  }
+  .grid_our__work {
+    width: 100% !important;
+    margin: 0;
+  }
+  .Work__rrow1,
+  .Work__rrow2 {
+    display: block !important;
+  }
+  .box2 {
+    padding: 100px 60px 100px !important;
+  }
+  .grid-container {
+    display: flex !important;
+    flex-direction: column;
+    padding-top: 30px !important;
+  }
+  .heading__subtitle__second {
+    display: contents !important;
+  }
+  .box3 {
+    margin: auto;
+    padding: 60px 0 !important;
+  }
+  .icon__person {
+    right: 30px !important;
+    top: 0px !important;
+  }
+  #personPopup {
+    width: 300px;
+  }
+
+  .solving__problems h3 {
+    padding: 0;
+    font-size: 25px !important;
+    padding: 20px;
+  }
+  .solving__problems {
+    padding-top: 130px;
+  }
+  .Work__heading {
+    margin-top: 30px !important;
+  }
+
+  .content {
+    position: relative;
+  }
+  .container__box__internal {
+    height: auto !important;
+    align-content: center;
+    justify-content: center;
+  }
+  .box4 {
+    padding: 100px 60px 100px !important;
+  }
+
+  .our__work__img {
+    width: 300px;
+    height: 212px;
+  }
+
+  .icon {
+    top: 0 !important;
+    width: 50px;
+    height: 50px;
+  }
+  .grid-item hr {
+    width: 0 !important;
+  }
+  .box5 {
+    padding: 0px !important;
+  }
+  .box5 h3 {
+    font-size: 20px !important;
+  }
+  .break {
+    display: none;
+  }
+  .hiring__section {
+    padding: 20px;
+  }
+  .hiring__holder {
+    padding: 50px 0 !important;
+  }
+  .hiring__img {
+    height: 200px;
+  }
+  .hiring__holder .hiring__section p {
+    font-size: 20px !important;
+  }
+  .form__section__holder {
+    padding: 20px !important;
+  }
+
+  .form__section__holder .form__section .form-control {
+    width: 100% !important;
+  }
+  .form__section__holder .form__section h2 {
+    line-height: 35px !important;
+  }
+  .hiring__img {
+    display: none !important;
+  }
+
+  .box5 .solving__problems {
+    padding-bottom: 50px;
+    padding-top: 50px;
+  }
+
+  .form__section__holder .form__section form {
+    padding: 20px !important;
+  }
+}
 .heading__subtitle {
   color: hsl(18, 95%, 66%);
   font-size: 24px;
@@ -16,9 +274,14 @@
   padding: 145px 0 225px 120px;
 }
 .container__box {
-  max-width: 1200px;
+  max-width: 1280px;
   width: 100%;
   margin: auto;
+}
+.container__box__internal {
+  display: grid;
+  place-items: center;
+  height: 345px;
 }
 .content {
   position: relative;
@@ -26,18 +289,39 @@
 
 .icon {
   position: absolute;
+  top: 0;
   right: 0;
-  top: 5px;
+}
+
+.icon__person {
+  position: absolute;
+  right: 126px;
+  top: 60px;
+  bottom: 0;
+  margin: auto;
+}
+
+.icon__person a {
+  position: absolute;
+  right: 0;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto;
   padding-top: 80px;
+  text-align: left;
+  column-gap: 50px;
 }
+
 .heading__subtitle__second {
   color: #3d4f5c;
   font-size: 30px;
+  display: inline-block;
+}
+hr {
+  width: 40px;
+  float: left;
 }
 .num {
   font-size: 30px;
@@ -45,4 +329,158 @@
 .box2 {
   background: #fbfafa;
   padding: 147px 0 157px;
+}
+
+.box4 {
+  background: #fbfafa;
+  padding: 147px 0 157px;
+}
+
+.box3 {
+  margin: auto;
+  padding: 60px 0 100px;
+}
+.box5 {
+  margin: auto;
+  padding: 60px 0 100px;
+}
+
+.solving__problems {
+  justify-content: center;
+  margin: auto;
+  display: flex;
+  align-items: center;
+}
+
+h3 {
+  font-size: 40px;
+  color: hsl(18, 95%, 66%);
+  padding: 0 20px;
+  position: relative;
+  top: 12px;
+  text-align: center;
+}
+
+.Work__heading {
+  margin-top: 140px;
+}
+
+.Work__rrow1 {
+  justify-content: center;
+  display: flex;
+  width: 100%;
+}
+.Work__rrow2 {
+  justify-content: center;
+  display: flex;
+  width: 100%;
+}
+.grid_our__work {
+  width: 50%;
+  display: flex;
+  position: 100px;
+  padding: 25px;
+  flex-direction: column;
+  /* align-content: center; */
+  justify-content: center;
+  align-items: center;
+}
+.heading__subtitle_ourWork {
+  font-size: 32px;
+  line-height: 30px;
+  font-weight: 700;
+}
+
+.heading__subtitle__second_ourWork {
+  color: #3d4f5c;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: center;
+  word-wrap: break-word;
+  min-height: 60px;
+}
+.Work__heading {
+  display: flex;
+  justify-content: center;
+}
+.work-img {
+  min-height: 270px;
+}
+.green {
+  color: #a9bc87;
+}
+.skyblue {
+  color: #8bb5c9;
+}
+.blue {
+  color: #00a0b6;
+}
+.purple {
+  color: #8b60d3;
+}
+.hiring__holder {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  background-color: #fbfafa;
+  padding: 140px 0;
+}
+.hiring__holder .hiring__section {
+  text-align: center;
+}
+.hiring__holder .hiring__section p {
+  color: #fb8958;
+  font-size: 24px;
+  margin-bottom: 30px;
+}
+.hiring__holder .hiring__section h2 {
+  margin: 0;
+}
+.form__section__holder {
+  background: url("/assets/img/Subtract.png"),
+    linear-gradient(to bottom, #ffc351, #ffc351);
+  background-repeat: no-repeat;
+  background-position: right bottom;
+  padding: 60px 0 70px;
+}
+.form__section__holder .form__section form {
+  background: #f3f3f3;
+  padding: 72px 40px 42px;
+  border-radius: 10px;
+  width: fit-content;
+}
+.form__section__holder .form__section h2 {
+  font-size: 60px;
+  color: #ffffff;
+  line-height: 55px;
+  margin-bottom: 34px;
+}
+.form__section__holder .form__section p {
+  font-size: 24px;
+  color: #ffffff;
+}
+.form__section__holder .form__section .form-control {
+  display: block;
+  border: 0;
+  width: 430px;
+  font-size: 18px;
+  border-radius: 10px;
+  margin-bottom: 16px;
+  padding-left: 16px;
+  color: #939393;
+  font-weight: 400;
+}
+.form__section__holder .form__section .form-btn {
+  text-align: center;
+}
+.form__section__holder .form__section .btn-grey {
+  margin-top: 18px;
+}
+.input-control {
+  height: 56px;
+}
+.textarea-control {
+  font-family: Circular Std;
+  padding-top: 16px;
+  resize: none;
 }
